[package]
name = "chain-config"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.dharitri-sc]
version = "=0.13.6"

[dependencies.dharitri-sc-modules]
version = "=0.13.6"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.6"
