[package]
name = "dct-safe"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bls-signature]
path = "../common/bls-signature"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.token-whitelist]
path = "../common/token-whitelist"

[dependencies.utils]
path = "../common/utils"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.dharitri-sc]
version = "=0.13.6"

[dependencies.dharitri-sc-modules]
version = "=0.13.6"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.6"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
