[package]
name = "multisigverifier"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "0.13.6"

[dependencies.bls-signature]
path = '../common/bls-signature'

[dependencies.transaction]
path = '../common/transaction'

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.6"

[workspace]
members = [
    ".",
    "meta",
]
